fix: fix the footer spacing issue

--- a/packages/ui/src/components/Footer/index.module.scss
+++ b/packages/ui/src/components/Footer/index.module.scss
@@ -12,8 +12,6 @@
   --utrecht-link-list-margin-block-start: 0;
   --utrecht-link-list-row-gap: 16px;
   --utrecht-link-social-border-color: transparent;
-  --utrecht-page-footer-padding-inline-end: 0;
-  --utrecht-page-footer-padding-inline-start: 0;
 
   display: block;
 }
